--- a/src/ui/feature/post/PostComments.pug
+++ b/src/ui/feature/post/PostComments.pug
@@ -42,7 +42,6 @@ script.
 style.
 	ol
 		margin 0.666em 0
-		margin-left -1em
 	.post-comments-empty-notification
 		color var(--c-text-weak)
 		padding 0.666em 0
@@ -50,4 +49,4 @@ style.
 		color var(--c-text-weak)
 		padding 0.666em 0
 	.post-more-replies
-		padding 0.666em 1em
+		padding 0.666em 0
