--- a/src/ui/common/MediaPlayer.pug
+++ b/src/ui/common/MediaPlayer.pug
@@ -171,9 +171,11 @@ style.
 		display none
 	video
 		background black
+		border-radius 12px
 		&::-webkit-media-controls
 			display none
 		:fullscreen &
+			border-radius none
 			height 100% !important
 			width 100% !important
 		.media-player-controls-hidden &
@@ -199,6 +201,7 @@ style.
 	.media-player-video-hint-overlay
 		align-items center
 		background rgba(0,0,0,0.5)
+		border-radius 12px
 		color white
 		display flex
 		justify-content center
