--- a/src/ui/feature/post/PostLink.pug
+++ b/src/ui/feature/post/PostLink.pug
@@ -31,33 +31,38 @@ script.
 			{#if show_subreddit}
 				SubredditNameTag(name={post.subreddit})
 			{:else if post.link_flair_text}
-				PostFlair(color={post.link_flair_background_color} emoji_style='image' rich_text={post.link_flair_richtext} text={post.link_flair_text})
+				PostFlair(color={post.link_flair_background_color} emoji_style='image' rich_text={post.link_flair_richtext} subreddit_name={post.subreddit} text={post.link_flair_text})
 		h1.post-link-title(class:md-spoiler-text={post.spoiler}) {post.title}
 
 style.
 	.post-link
-		align-items flex-start
-		border 1px solid var(--c-subreddit-theme)
+		border 1px solid
 		border-radius 12px
-		display flex
-		flex-flow column nowrap
-		gap 6px
+		display block
 		padding 12px
 		&.post-stickied
 			color darkseagreen
 		&:hover
 			background var(--c-subreddit-theme)
-			color var(--c-subreddit-theme-text)
 	.post-link-tags
+		align-items center
 		display flex
 		gap 3px
+		max-width 100%
+		overflow auto
+		scrollbar-width none
+		white-space pre
+		&::-webkit-scrollbar
+			display none
+		&:has(*)
+			margin-bottom 6px
 	.post-link-title
 		font inherit
 		line-height 1.333
 		margin 0
 		overflow-wrap anywhere
 		.post-stickied &
-			font-weight bold
+			font-weight 600
 		&.md-spoiler-text
 			padding 0
 			.post-link:hover &
