--- a/src/ui/feature/wiki/WikiPage.pug
+++ b/src/ui/feature/wiki/WikiPage.pug
@@ -3,6 +3,7 @@ script.
 	import api from '../../../api/index.js'
 	import { Time } from '../../../lib/index.js'
 
+	import FeedAvatar from '../feed/FeedAvatar.pug'
 	import FormattedHTML from '../../common/FormattedHTML.pug'
 	
 	export page_name = null
@@ -24,7 +25,7 @@ script.
 	)
 
 svelte:head
-	title r/{subreddit_name} - Wiki - {page_name}
+	title {subreddit_name} / wiki / {page_name}
 {#if error}
 	.wiki-unavailable-reason
 		p Wiki page unavailable.
@@ -34,18 +35,20 @@ svelte:head
 	p Loading...
 {:else if page}
 	article.wiki
+		FeedAvatar(subreddit_name={subreddit_name} type='subreddit_posts')
 		section.wiki-path
 			a(href='/{subreddit_name}/wiki') Wiki
 			{#each page_name.split('/') as path_segment, i}
 				| >
 				a(class:wiki-path-segment-current={i === page_name.split('/').length - 1} href="/{subreddit_name}/wiki/{page_name.split('/').slice(0, i + 1).join('/')}") {path_segment}
 		section.wiki-info
-			date.wiki-edit-date Revised {Time.sToRelTimeStr(page.revision_date)} ago
+			date.wiki-edit-date(title={Time.sToAbsTimeStr(page.revision_date)}) Last revised {Time.sToRelTimeStr(page.revision_date)} ago
 		section.wiki-body
 			FormattedHTML(html={page.content_html})
 
 style.
 	.wiki
+		padding 4em 0
 		width 560px
 	.wiki-body
 		margin-top 3em
@@ -70,34 +73,19 @@ style.
 		left calc(50% + 360px)
 		max-height 100vh
 		overflow auto
-		padding 40px 0
+		padding 80px 0
 		position fixed
 		scrollbar-width none
 		top 0
 		width 320px
 		&::-webkit-scrollbar
 			display none
-	:global(.wiki .toc > ul)
-		padding 40px 0 40px 80px
-		position relative
-		&::before
-			color var(--c-text-weak)
-			content 'Table of Contents'
-			position absolute
-			text-transform uppercase
-			top 0
 	:global(.wiki .toc a)
 		text-decoration none
 		&:hover
 			text-decoration underline
-	:global(.wiki .toc li)
-		margin-inline-start 0
-		padding-inline-start 0
-		&::marker
-			content none
 	:global(.wiki .toc ol ol)
 	:global(.wiki .toc ol ul)
 	:global(.wiki .toc ul ol)
 	:global(.wiki .toc ul ul)
 		border-left 1px solid var(--c-text-faint)
-		padding-left 1em
