--- a/src/ui/feature/comment/Comment.pug
+++ b/src/ui/feature/comment/Comment.pug
@@ -60,6 +60,15 @@ script.
 
 	interact = (action_type, data) ->
 		switch action_type
+			when 'approve'
+				api.submit(api.ID('comment_approve', id), {}, (status) ->
+					if status.success
+						api.submit(api.ID('comment_ignore_reports', id))
+				)
+			when 'ban_user'
+				api.submit(api.ID('user_ban', data.user_name, data.subreddit_name), { days: data.days, message_to_user: data.message_to_user, violation_reason: data.violation_reason })
+			when 'distinguish_as_mod'
+				api.submit(api.ID('comment_distinguish', id), { type: 'moderator' })
 			when 'edit'
 				editing = true
 			when 'edit_finish'
@@ -69,6 +78,10 @@ script.
 					if status.success
 						editing = false
 				)
+			when 'pin'
+				api.submit(api.ID('comment_pin', id))
+			when 'remove'
+				api.submit(api.ID('comment_remove', id))
 			when 'reply'
 				replying = true
 			when 'reply_finish'
@@ -85,6 +98,10 @@ script.
 				reporting = false
 			when 'save'
 				api.submit(api.ID('comment_save', id), {})
+			when 'undistinguish'
+				api.submit(api.ID('comment_distinguish', id), { type: null })
+			when 'unpin'
+				api.submit(api.ID('comment_pin', id), { unpin: true })
 			when 'unsave'
 				api.submit(api.ID('comment_save', id), { unsave: true })
 			when 'vote'
@@ -108,7 +125,7 @@ script.
 				button.comment-score(on:contextmenu={e => e.preventDefault()} on:mousedown={e => interact('vote', { current_vote: comment.likes === true ? 1 : comment.likes === false ? -1 : 0, mouse_button_number: e.button })} style='background: {score_color}; color: {score_text_color}') {score_text}
 			{:else}
 				data.comment-score(style='background: {score_color}; color: {score_text_color}') {score_text}
-			section.comment-body(data-can-edit={comment.author === api.getUser() || null} data-radial-menu='comment' data-saved={comment.saved || null} on:radialmenu={e => interact(e.detail)})
+			section.comment-body(data-can-edit={comment.author === api.getUser() || null} data-can-mod={comment.can_mod_post || null} data-distinguish={comment.distinguished || null} data-pinned={comment.pinned || null} data-radial-menu='comment' data-saved={comment.saved || null} on:radialmenu={e => interact(e.detail)})
 				FormattedHTML(html={comment.body_html})
 			aside.comment-user-info
 				UserByline(distinguish={comment.distinguished || (comment.is_submitter && 'submitter')} flair_color={comment.author_flair_background_color} flair_rich_text={comment.author_flair_richtext} flair_text={comment.author_flair_text} name={comment.author})
