--- a/src/ui/feature/post/Post.pug
+++ b/src/ui/feature/post/Post.pug
@@ -62,8 +62,17 @@ script.
 
 	interact = (action_type, data) ->
 		switch action_type
+			when 'approve'
+				api.submit(api.ID('post_approve'), {}, (status) ->
+					if status.success
+						api.submit(api.ID('post_ignore_reports', id))
+				)
+			when 'ban_user'
+				api.submit(api.ID('user_ban', data.user_name, data.subreddit_name), { days: data.days, message_to_user: data.message_to_user, violation_reason: data.violation_reason })
 			when 'edit'
 				window.open('https://old.reddit.com/' + id)
+			when 'remove'
+				api.submit(api.ID('post_remove', id))
 			when 'reply'
 				replying = true
 			when 'reply_finish'
@@ -111,7 +120,7 @@ svelte:head
 	article.post(class:post-downvoted={post.likes === false} class:post-stickied={post.stickied} class:post-upvoted={post.likes === true} class:post-with-low-score={post.score < 1})
 		header.post-header
 			button.post-score(on:contextmenu={e => e.preventDefault()} on:mousedown={e => interact('vote', { current_vote: post.likes === true ? 1 : post.likes === false ? -1 : 0, mouse_button_number: e.button })}) {post.hide_score ? '?' : post.score}
-			h1.post-title(data-can-edit={post.author === api.getUser() || null} data-radial-menu='post' data-saved={post.saved || null} on:radialmenu={e => interact(e.detail)}) {post.title}
+			h1.post-title(data-can-edit={post.author === api.getUser() || null} data-can-mod={post.can_mod_post || null} data-radial-menu='post' data-saved={post.saved || null} on:radialmenu={e => interact(e.detail)}) {post.title}
 			aside.post-metadata
 				UserAvatar(name={post.author})
 				ol.post-tags
@@ -127,7 +136,7 @@ svelte:head
 						PostFlair(color={post.link_flair_background_color} emoji_style='image' rich_text={post.link_flair_richtext} subreddit_name={post.subreddit} text={post.link_flair_text})
 				Date(created_s={post.created_utc} edited_s={post.edited} format='rel-abs')
 				UserByline(distinguish={post.distinguished} flair_rich_text={post.author_flair_richtext} flair_text={post.author_flair_text} name={post.author})
-		section.post-content(data-can-edit={post.author === api.getUser() || null} data-radial-menu='post' data-saved={post.saved || null} on:radialmenu={e => interact(e.detail)})
+		section.post-content(data-can-edit={post.author === api.getUser() || null} data-can-mod={post.can_mod_post || null}  data-radial-menu='post' data-saved={post.saved || null} on:radialmenu={e => interact(e.detail)})
 			{#if post.removed_by_category}
 				.post-content-unavailable
 					{#if post.removed_by_category === 'author' || post.removed_by_category === 'deleted'}
